--- a/src/index.css
+++ b/src/index.css
@@ -5,16 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-.wrapper {
-  padding-top: 5rem;
-  margin: 0 auto;
-  width: 600px;
-}
+} 
 
