--- a/src/content.css
+++ b/src/content.css
@@ -1,7 +1,9 @@
-.content {
-    /* padding-bottom: 3rem; */
-    height: 33rem;
-}
+/* .content {
+    padding-bottom: 3rem;
+} */
+/* .anchor {
+    padding-top: 30rem;
+} */
 .chapter1 {
     height: 33rem;
     background-color: bisque;
